<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Simple Pass</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_act_select_account">Select Account</string>
    <string name="import_pick_file_instructions">Pick a file from your phone that contains the Accounts you want to import</string>
    <string name="title_activity_act_generic_frag_test">Testing Generic FragList</string>
    <string name="notificationOverlayTitle">Overlay is Running</string>
    <string name="notificationOverlayText">Press me to hide the overlay</string>
    <string name="vaultNameHint">Vault Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="securityLevelHeader">"Security Level: "</string>
    <string name="iterationSpinnerInfo">The security level balances speed vs security. Low security means a quicker vault unlock</string>
    <string name="accountNameHint">Account Name</string>
    <string name="username">Username</string>
    <string name="groupHeader">Group:</string>
    <string name="defaultGroup">Default</string>
    <string name="frag_list_vault_title">Vaults</string>
    <string name="unlock">Unlock</string>
    <string name="enterVaultPasswordTitle">Enter Vault Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="frag_list_account_title">Accounts</string>
    <string name="create_new_vault">Create New Vault</string>
    <string name="create_new_account">Create new account</string>
    <string name="start_overlay">Start Overlay</string>
    <string name="stop_overlay">Stop Overlay</string>
    <string name="title_activity_act_tutorial">Tutorial</string>
    <string name="change_keyboard_instructions">Click \"Change Keyboard\" the button above. 
        Select SimplePass. Click \"Done\"</string>
    <string name="change_keyboard">Change Keyboard</string>
    <string name="done">Done</string>
    <string name="lock_vault">Lock Vault</string>
    <string name="lock_vault_condensed">Lock</string>
    <string name="empty_vault_message">The Vault is empty! Add a new Account using the \"plus\" button above</string>
    <string name="add_new_account">Add New Account</string>
    <string name="add_new_account_condensed">Add Account</string>
    <string name="add_new_vault">Add New Vault</string>
    <string name="add_new_vault_condensed">Add Vault</string>
    <string name="no_vaults_message">You have no vaults! Add a new Account using the plus button above</string>
    <string name="delete_vault">Delete Vault(s)</string>
    <string name="delete_vault_condensed">Delete</string>
    <string name="delete_account">Delete Account(s)</string>
    <string name="delete_account_condensed">Delete</string>
    <string name="START_OVERLAY_ACTION">com.nakedferret.simplepass.START_OVERLAY</string>
    <string name="STOP_OVERLAY_ACTION">com.nakedferret.simplepass.STOP_OVERLAY</string>
    <string name="import_accounts">Import Account(s)</string>
    <string name="import_account_condensed">Import</string>
    <string name="title_act_import">Import</string>
    <string name="first_row">First Row:</string>
    <string name="name_column">Name Column:</string>
    <string name="username_column">Username Column:</string>
    <string name="password_column">Password Column:</string>
    <string name="category_column">Category Column:</string>
    <string name="next">Next</string>
    <string name="pickVaultForImport">Choose the Accounts to place in a Vault</string>
    <string name="mapColumnsForImport">Specify which columns in the CSV file contain the Account name, username, password, and category</string>
    <string name="pick_file_button">Pick File</string>
    <string name="import_pick_file_type_instruction">Choose the file type</string>
    <string name="import_pick_file_mapping_instruction">Choose the file format</string>
    <string name="continue_">Continue</string>
    <string name="continue_condensed">Continue</string>
    <string name="ignore_accounts">Ignore Account(s)</string>
    <string name="ignore_accounts_condensed">Ignore</string>
    <string name="import_accounts_condensed">Import</string>
    <string name="select_a_vault_prompt">Select A Vault</string>
    <string name="choose_a_vault">Choose A Vault</string>
    <string name="ic_action_view_desc">A Magnifying Glass</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_header">Username</string>
    <string name="name_header">Name</string>
    <string name="password_header">Password</string>
    <string name="category_header">Category</string>
    <string name="ic_action_edit_desc">A pencil</string>
    <string name="ic_action_check_desc">A check mark</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="confirm_changes_condensed">Confirm</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="discard_changes_condensed">Discard</string>
    <string name="merge_category_title">Similar Category</string>
    <string name="merge_category_message">These two categories are similar \n\n %1$s and %2$s \n\n Which would you like to use?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_import">Confirm Import</string>
    <string name="confirm_import_condensed">Confirm</string>

</resources>