<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FragPassInput" >

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/passwordInput"
        android:layout_below="@+id/cancelButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancelButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/horizontalSeparator"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_below="@+id/progressIndicator"
        android:layout_centerHorizontal="true" >
    </View>

    <Button
        android:id="@id/cancelButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/passwordInput"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@+id/horizontalSeparator"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/unlockButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/horizontalSeparator"
        android:text="@string/unlock" />

</RelativeLayout>