<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FragImportEditAccount" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:text="@string/name_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/verticalSeparator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView1"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verticalSeparator1"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nameInput"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/username_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/verticalSeparator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView2"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verticalSeparator2"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/showUsernameButton"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <ImageButton
        android:id="@+id/showUsernameButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/verticalSeparator2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/ic_action_view_desc"
        android:src="@drawable/ic_action_view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/usernameInput"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/verticalSeparator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView3"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verticalSeparator3"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/showPasswordButton"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <ImageButton
        android:id="@+id/showPasswordButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/verticalSeparator3"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/ic_action_view_desc"
        android:src="@drawable/ic_action_view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/showPasswordButton"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/category_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/verticalSeparator4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView4"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/categoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/verticalSeparator4"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text" />

</RelativeLayout>